--- a/chart/stash/values.yaml
+++ b/chart/stash/values.yaml
@@ -39,7 +39,8 @@ annotations: {}
 ## Node labels for pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
 ##
-nodeSelector: {}
+nodeSelector:
+  region: informatik
 
 ## Tolerations for pod assignment
 ## Ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
@@ -83,4 +84,4 @@ apiserver:
   disableStatusSubresource: false
 
 # Send usage events to Google Analytics
-enableAnalytics: true
+enableAnalytics: false
