--- a/chart/stash/values.yaml
+++ b/chart/stash/values.yaml
@@ -97,14 +97,14 @@ enableAnalytics: false
 
 monitoring:
   # specify monitoring agent (either "prometheus.io/builtin" or "prometheus.io/coreos-operator")
-  agent: "none"
+  agent: "prometheus.io/builtin"
   # specify whether to monitor backup and recovery
-  backup: false
+  backup: true
   # specify whether to monitor stash operator
-  operator: false
+  operator: true
   # specify where ServiceMonitor crd will be created
   prometheus:
-    namespace: ""
+    namespace: "monitoring"
   serviceMonitor:
     labels: {}
 
