worked on monitoring

--- a/chart/stash/values.yaml
+++ b/chart/stash/values.yaml
@@ -101,7 +101,7 @@ monitoring:
   # specify whether to monitor backup and recovery
   backup: true
   # specify whether to monitor stash operator
-  operator: true
+  operator: false
   # specify where ServiceMonitor crd will be created
   prometheus:
     namespace: "monitoring"
