--- a/chart/stash/values.yaml
+++ b/chart/stash/values.yaml
@@ -92,14 +92,14 @@ enableAnalytics: false
 
 monitoring:
   # specify monitoring agent (either "prometheus.io/builtin" or "prometheus.io/coreos-operator")
-  agent: "prometheus.io/builtin"
+  agent: "prometheus.io/coreos-operator"
   # specify whether to monitor backup and recovery
   backup: true
   # specify whether to monitor stash operator
-  operator: false
+  operator: true
   # specify where ServiceMonitor crd will be created
   prometheus:
-    namespace: "monitoring"
+    namespace: "prometheus"
   serviceMonitor:
     labels: {}
 
